--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
       <h4>Algunas redes sociales</h4>
       <a
         href="https://www.linkedin.com/in/francisco-jose-gomez-sandoval-b5583b16/"
+        target="blank"
         >Linkedin</a
       >
-      <a href="https://github.com/Pakogomez79">Github</a>
+      <a href="https://github.com/Pakogomez79" target="blank">Github</a>
       <br />
     </div>
 
