--- a/index-css.html
+++ b/index-css.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Presentación</title>
+    <title>Presentación con CSS</title>
     <link rel="stylesheet" type="text/css" href="./assets/css/estilos.css" />
   </head>
   <body>
@@ -55,10 +55,13 @@
           <li>
             <a
               href="https://www.linkedin.com/in/francisco-jose-gomez-sandoval-b5583b16/"
+              target="blank"
               >Linkedin</a
             >
           </li>
-          <li><a href="https://github.com/Pakogomez79">Github</a></li>
+          <li>
+            <a href="https://github.com/Pakogomez79" target="blank">Github</a>
+          </li>
         </ul>
         <br />
       </div>
